samples/_failures_safe/1761637691_805d84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6134604d.c: In function ‘main’:
./samples/SAFE/__tmp_6134604d.c:130:16: error: missing terminating " character
  130 |         printf("First
      |                ^~~~~~
./samples/SAFE/__tmp_6134604d.c:130:9: error: expected expression at end of input
  130 |         printf("First
      |         ^~~~~~
./samples/SAFE/__tmp_6134604d.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6134604d.c:130:9: error: expected declaration or statement at end of input
